crates/sim-citizen-derive/tests/ui/fail/non_citizen_empty_reason.rs
use sim_citizen_derive::non_citizen;

#[non_citizen(
    reason = "",
    kind = "live-handle",
    descriptor = "example/live-handle"
)]
struct EmptyReason;

fn main() {}
